--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation files('libs/musicg-1.4.2.0.jar')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation files('libs/httpclient5-5.0.1.jar')
+    implementation files('libs/httpcore5-5.0.1.jar')
+    implementation files('libs/json-20200518.jar')
+    implementation files('libs/slf4j-api-2.0.0-alpha1.jar')
+    implementation files('libs/slf4j-simple-2.0.0-alpha1.jar')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
